lost all me changes squidward